correct column spacing issue

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,7 +4,6 @@ body {
   font-family: Avenir;
   font-size: 20px;
 }
-
 .block {
   margin-top: 20px;
   text-align: center;
@@ -12,28 +11,23 @@ body {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   box-shadow: 0px 0px 20px 0px gray;
-  :hover {
+  .blockImage:hover {
     padding: 1px;
     cursor: pointer;
   }
-  :active {
+  .blockImage:active {
     background: rgb(209, 209, 209);
     padding: 10px;
   }
-}
-.middle {
-  margin-left: 4px;
-  margin-right: 4px;
 }
 .blockImage {
   img {
     width: 100%;
   }
 }
-
 .weatherBar {
   padding: 30px;
-  margin-top: 10px;
+  margin-top: 30px;
   border-radius: 10px;
   text-align: center;
   box-shadow: 0px 0px 20px 0px gray;
